<resources>
    <string name="app_name">E_Comm_Home_Demo_App</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="offers">Offers</string>
    <string name="profile">Profile</string>
    <string name="network_error_msg">Network Failure occurred</string>
    <string name="no_internet_msg">Please make sure your are connected to internet and try again</string>
    <string name="something_went_wrong_msg">Something went wrong</string>
    <string name="todo">TODO</string>
    <string name="home_slider_image_recycler_view_item">home slider image recycler view item</string>
    <string name="prescription_ndispensing">Prescription\nDispensing</string>
    <string name="exclusive_noffers">Exclusive\nOffers!</string>
    <string name="shop_offers_nmagazine">Shop Offers\nMagazine</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="view_all">View All</string>
    <string name="our_services">Our services</string>
    <string name="shop_by_brand">Shop By Brand</string>
    <string name="_56_75sar">56.75SAR</string>
    <string name="_32_55sar">32.55SAR</string>
    <string name="_40_off">40% off</string>
    <string name="top_selling">Top Selling</string>
    <string name="zinc_olive_cream_75_gm">Zinc Olive cream 75 gm</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="hot_deals">Hot Deals</string>
    <string name="chosen_for_you">Chosen for you</string>
    <string name="refreshing_home_page_msg">Refreshing home page, please wait...</string>
    <string name="detail_screen">Detail Screen</string>
</resources>